--- a/partials/footer.html
+++ b/partials/footer.html
@@ -26,6 +26,12 @@
           <a href="#" class="text-gray-600 hover:text-blue-400">Twitter</a>
           <a href="#" class="text-gray-600 hover:text-pink-600">Instagram</a>
         </div>
+        <div class="flex space-x-4 mt-4">
+          <a href="index.html" class="flex">
+        <img src="smkn1cilamaya/logo twh.webp" alt="logo" class="h-10 mr-4" />
+        <img src="smkn1cilamaya/Merdeka.png" alt="Logo" class="h-10 mr-4" />
+        </a>
+        </div>    
       </div>
     </div>
 
