--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+/* Background */
 .bg {
   background-image: url("smkn1cilamaya/img7.jpg");
   background-size: cover;
@@ -6,7 +7,14 @@
   background-attachment: fixed;
 }
 
-/*bagian rotate nya arrow*/
+/* Responsive background fix */
+@media (max-width: 768px) {
+  .bg {
+    background-attachment: scroll;
+  }
+}
+
+/* Animasi rotasi panah */
 @keyframes bounce-rotate-hover {
   0% {
     transform: rotate(0deg);
@@ -50,4 +58,3 @@
 .animate-leave {
   animation: bounce-rotate-leave 0.8s forwards;
 }
-/*tutup bagian rotate arrow*/
