--- a/partials/footer.html
+++ b/partials/footer.html
@@ -29,7 +29,7 @@
         <div class="flex space-x-4 mt-4">
           <a href="index.html" class="flex">
         <img src="smkn1cilamaya/logo twh.webp" alt="logo" class="h-10 mr-4" />
-        <img src="smkn1cilamaya/Merdeka.png" alt="Logo" class="h-10 mr-4" />
+        <img src="smkn1cilamaya/merdeka.png" alt="Logo" class="h-10 mr-4" />
         </a>
         </div>    
       </div>
