--- a/partials/footer.html
+++ b/partials/footer.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="mt-8 border-t border-gray-300 pt-4 text-center text-sm">
-      &copy; 2025 MyWebsite. All rights reserved.
+      &copy; 2025 <span class="hover:underline"><a href="">Wijdan.</a></span> All rights reserved.
     </div>
   </div>
 </footer>
